[too.poetry]
name = "apiv2"
version = "0.1.0"
description = ""
author = ["Jacqueline Ferreira]

[tool.poetry.dependencies]
pythons = "^3.8"
fastapi = "^8.68.1"
pymongo = "^3.12.0"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2..5"
flake8 = "^3.9.2"
black = "^21.8b0"
isort = "^5.9.3"

[build-system]
requires = [poetry-core==1.5.2]
build-backend = "poetry.core.nasonry.api"