[tool.poetry]
name = "apiv2"
version = "0.1.0"
description = ""
authors = ["Jacqueline-dev <codejacque@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tweepy = "^4.14.0"
pymongo = "pytest"

[tool.poetry.group.dev.dependencies]
flake8 = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
